tp-kubernetes-2/ressources/k8s/elasticsearch/statefulset.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: elasticsearch
  namespace: tp-monitoring
spec:
  selector:
    matchLabels:
      app: elasticsearch
  # serviceName: elasticsearch
  replicas: 1
  template:
    metadata:
      labels:
        app: elasticsearch
        name: elasticsearch
    spec:
      containers:
      - name: elasticsearch
        image: docker.elastic.co/elasticsearch/elasticsearch:7.16.1
        ports:
        - containerPort: 9200
          name: rest
        - containerPort: 9300
          name: inter-node
        volumeMounts:
        - name: vol-elastic
          mountPath: /usr/share/elasticsearch/data
      volumes:
        - name: vol-elastic
          persistentVolumeClaim:
            claimName: elastic-volume-claim
