tp-kubernetes-2/ressources/k8s/elasticsearch/services.yml
apiVersion: v1
kind: Service
metadata:
  name: headless-service
  namespace: tp-monitoring
spec:
  clusterIP: None
  selector:
    name: elasticsearch
  ports:
  #-- port du service
  - port: 9200
  #-- port du conteneur
    targetPort: 9200
    protocol: TCP
    name: elastic-1
  - port: 9300
  #-- port du conteneur
    targetPort: 9300
    protocol: TCP
    name: elastic-2
