tp-kubernetes-2/ressources/k8s/elasticsearch/network-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: elasticsearch-network-policy
  namespace: tp-monitoring
spec:
  podSelector:
    matchLabels:
      name: elasticsearch
  policyTypes:
    - Ingress
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: client-elasticsearch
      ports:
        - port: 9200
          protocol: TCP
        - port: 9300
          protocol: TCP
